2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/15_neq_bool_bool_aff_bool.deca
// Description :
//  Test sur l'opération !=
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024


{
    boolean b = 12.34!=12.35;
}